[tool.poetry]
name = "turtle-link-shortener"
version = "0.1.0"
description = ""
authors = ["blackprince001 <appiahboaduprince@gmail.com>"]
readme = "README.md"
packages = [{include = "turtle_link_shortener"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
sqlalchemy = "^1.4.46"
pydantic = "^1.10.4"
python-dotenv = "^0.21.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
uvicorn = "^0.20.0"
qrcode = "^7.4.2"
pillow = "^10.0.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"


[tool.poetry.group.docs.dependencies]
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-material = "^9.1.15"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
